# cadmesh-basic

./: CMakeLists.txt  README.md  basic.cc  basic.hh  convert.py  main.cc
macros/: init_vis.mac  vis.mac
